Fucking fixed the stupid collapse on slot click

--- a/css/style.css
+++ b/css/style.css
@@ -1534,6 +1534,7 @@
 	top: 10px;
 	left: 0;
 	padding-right: 16px;
+	width: 100%;
 }
 
 .scroll-pane {
@@ -1606,11 +1607,33 @@
 	background: #000;
 	color: #fff;
 	cursor: pointer;
+	padding: 2px 10px;
 }
 
+.accordionHeader .accordionHeaderTitle {
+	
+}
 
+.accordionHeader .accordionHeaderArrow {
+	display: inline-block;
+	float: right;
+	
+	/* Animation */
+	-webkit-transition: all 0.4s ease-in-out;
+	-moz-transition: all 0.4s ease-in-out;
+	-ms-transition: all 0.4s ease-in-out;
+	-o-transition: all 0.4s ease-in-out;
+	transition: all 0.4s ease-in-out;
+}
 
-
+.accordionHeader.collapsed .accordionHeaderArrow {
+	/* Rotate */
+	-moz-transform: rotate(90deg);
+	-webkit-transform: rotate(90deg);
+	-o-transform: rotate(90deg);
+	-ms-transform: rotate(90deg);
+	transform: rotate(90deg);
+}
 
 
 
